--- a/app/views/layouts/app.html.erb
+++ b/app/views/layouts/app.html.erb
@@ -10,23 +10,18 @@
   </head>
 
   <body>
-    <nav class="navbar navbar-default"> 
-      <div class="container-fluid">
-        <div class="navbar-header">
-          <a href="#" class="navbar-brand">SON Rails</a>
-        </div>
-        <ul class="nav navbar-nav">
-          <li><a href="#">Link</a></li>
-        </ul>
-      </div>      
-    </nav>
+    <header>
+        Welcome to Son Rails!
+        <%= image_tag 'https://rubyonrails.org/images/rails-logo.svg' %>
+        <%# <%= video_tag %>
+        <%# <%= audio_tag %> 
+        <%= t('hello') %>
+    </header>
     <main class="container">
-      <%= yield %>    
+        <%= yield %>
     </main>
-    <footer class="navbar navbar-default">
-      <div class="container text-center">
+    <footer>
         <p> &copy; Copyright School Of Net </p>
-      </div>
     </footer>
   </body>
 </html>
